@@ -2,6 +2,19 @@
     "package":{
         "resources": [
             {
+                "pagetitle": "00 - Universal",
+                "longtitle": "",
+                "description": "",
+                "introtext": "",
+                "alias": "universal",
+                "menutitle": "Universal",
+                "parent": "00 - Electrons",
+                "file": "05_pages/hub/pattern-library/electrons/universal.html",
+                "properties": "05_pages/hub/pattern-library/electrons/universal.json",
+                "context_key": "hub",
+                "template": "BasicDetail",
+                "published": "1"
+            },{
                 "pagetitle": "00 - Connections",
                 "longtitle": "Create crosslinks inside your Romanesco installation",
                 "description": "",
