@@ -1,0 +1,20 @@
+{
+    "package": {
+        "resources": [
+            {
+                "pagetitle": "00 - Universal - Styling Variables",
+                "longtitle": "",
+                "description": "",
+                "introtext": "",
+                "alias": "variables",
+                "menutitle": "Styling Variables",
+                "parent": "00 - Universal",
+                "file": "05_pages/hub/pattern-library/electrons/universal/variables.html",
+                "properties": "05_pages/hub/pattern-library/electrons/universal/variables.json",
+                "context_key": "hub",
+                "template": "BasicDetail",
+                "published": "1"
+            }
+        ]
+    }
+}
