@@ -2,6 +2,19 @@
     "package":{
         "resources": [
             {
+                "pagetitle": "02 - Buttons",
+                "longtitle": "",
+                "description": "",
+                "introtext": "",
+                "alias": "buttons",
+                "menutitle": "Buttons",
+                "parent": "02 - Molecules",
+                "file": "05_pages/hub/pattern-library/molecules/buttons.html",
+                "properties": "05_pages/hub/pattern-library/molecules/buttons.json",
+                "context_key": "hub",
+                "template": "BasicDetail",
+                "published": "1"
+            },{
                 "pagetitle": "02 - Content",
                 "longtitle": "",
                 "description": "",
