@@ -3,6 +3,9 @@
 ## Backyard 0.3.1
 
 - Add Backyard resources
+- Add Dashboard resource
+- Add Universal styling under Electrons (showing the Semantic UI site.variables)
+- Change alias 'pattern-library' to 'patterns'
 - Corrections and additional content
 
 ## Backyard 0.3.0
